[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/ammo.png" type="Texture" id=1]
[ext_resource path="res://weapons/Grenade.gd" type="Script" id=2]
[ext_resource path="res://sprites/exp1.png" type="Texture" id=3]
[ext_resource path="res://sprites/smoke.png" type="Texture" id=4]
[ext_resource path="res://sprites/concus.png" type="Texture" id=5]
[ext_resource path="res://sprites/crosshair.png" type="Texture" id=6]
[ext_resource path="res://sfx/Concrete_Explosion_1.wav" type="AudioStream" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.0518519, 0.592593, 1 )
colors = PoolColorArray( 0.376471, 0.376471, 0.376471, 0, 1, 1, 1, 1, 0.537255, 0.478431, 0.537255, 1, 0.8, 0.8, 0.8, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.495454 ), 0.0, 1.82457, 0, 0, Vector2( 1, 0.477273 ), -1.36956, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 1.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 47.99
initial_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 1.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 36.0, 72.0, 108.0, 144.0, 180.0, 216.0, 252.0, 288.0, 324.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 2.0

[sub_resource type="Animation" id=9]
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 34.5434

[node name="Grenade" type="KinematicBody2D" groups=[
"instanced",
]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="TargetSprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 5 )
vframes = 2
hframes = 3
frame = 5

[node name="TargetSprite2" type="Sprite" parent="TargetSprite"]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
vframes = 2
hframes = 3
frame = 5

[node name="TargetSprite3" type="Sprite" parent="TargetSprite"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -32.7414, -0.017704 )
texture = ExtResource( 6 )

[node name="TargetSprite4" type="Sprite" parent="TargetSprite"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.275238, -32.9111 )
texture = ExtResource( 6 )

[node name="TargetSprite5" type="Sprite" parent="TargetSprite"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 33.7573, 0.694275 )
texture = ExtResource( 6 )

[node name="TargetSprite6" type="Sprite" parent="TargetSprite"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.132835, 33.5877 )
texture = ExtResource( 6 )

[node name="SmokeParticles2D" type="Particles2D" parent="."]
rotation = -3.14159
amount = 32
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="SmokeBlastParticles2D" type="Particles2D" parent="."]
rotation = -3.14159
emitting = false
amount = 32
one_shot = true
explosiveness = 0.91
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="SmokeBlastParticles2D"]
wait_time = 0.001
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 4
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "spin"
anims/spin = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )
disabled = true

[node name="ShowTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true
autostart = true

[node name="Explosion" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 4
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Explosion"]
autoplay = "start"
anims/blowup = SubResource( 9 )
anims/start = SubResource( 10 )

[node name="ExplosionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )
disabled = true

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
attenuation = 0.258816
bus = "sfx"
[connection signal="timeout" from="SmokeBlastParticles2D/Timer" to="SmokeBlastParticles2D" method="set_emitting" binds= [ true ]]
[connection signal="timeout" from="ShowTimer" to="Sprite" method="show"]
